# tribute-pipeline

./: .gitignore  CHANGELOG.md  Dockerfile  LABELING_GUIDELINES.md  PRIVACY.md  README.md  RELEASING.md  classifier_config.sample.json  conftest.py  dependencies.txt  pyproject.toml  requirements.txt  run_all.py  run_manifest.json  tag_vocabulary.json  taxonomy.json  tmp_pii_test.py
.github/workflows/: ci.yml
docs/: DEPRECATIONS.md  EVALUATION_PLAN.md  LABELING_MODULE.md  SUBMISSION_CHECKLIST.md  classification_architecture.md
models/distilbert_meta_demo/: calibration.json  meta.json  model.joblib
models/distilbert_synth/: meta.json  model.joblib
models/selftrain/: calibration.json  metadata.json  model.pkl  vectorizer.pkl
models/selftrain_embed/: calibration.json  metadata.json  model.pkl  vectorizer.pkl
models/selftrain_v2/: calibration.json  metadata.json  model.pkl  vectorizer.pkl
models/tfidf_synth/: meta.json  model.joblib
reports/: calibration_dev.json  eigenlayer_examples.md  thresholds_demo.json
scripts/: __init__.py  analyze_provenance.py  apply_calibration.py  audit_evidence_labeltag.py  calibrate_confidence.py  calibration_eval.py  check_health.py  ci_health_gate.py  classify  cluster_entropy.py  collect_metrics.py  count_loc.py  deprecation.py  diagnostics_summary.py  disagreement_sampler.py  env_check.py  evaluate_labeled.py  extract-insights  generate_synthetic_predictions.py  labeling_prepare.py  labeling_split.py  labeling_validate.py  multi_seed_scrape.py  pseudo_label_generate.py  qualitative_examples.py  quick_demo.py  regenerate_artifacts.py  run_pipeline.py  scrape  smoke_test_unified.py  spec_conformance.py  synthetic_health_demo.ps1  validate_delivery.py
src/: inprocess_runner.py  selfcheck.py
src/cli/: active_learning_queue.py  auto_label.py  benchmark_classify.py  calibration_check.py  calibration_report.py  classify.py  classify_v2.py  diagnose_insights.py  ensemble_classify.py  evaluate.py  extract_insights.py  generate_reports.py  insights.py  label_distribution.py  pipeline_e2e.py  prepare_balanced_seed_batch.py  prepare_seed_batch.py  scrape.py  self_train.py  split_dataset.py  summary.py  threshold_tune.py  train_classifier.py  truncate.py  uncertainty_sample.py  validate.py  validate_labels.py
src/core/: boilerplate.py  config.py  crawl.py  insight_extract.py  iojsonl.py  robots.py  urlnorm.py
src/insights/: __init__.py  adin_taxonomy.py  backends.py  (+17 more)
tests/: test_alias_cli.py  test_backends.py  test_classify.py  test_cli_flags.py  test_confidence.py  test_count_loc.py  test_crawl_content_dedupe.py  test_crawl_size_guard.py  test_crawl_smoke.py  test_distilbert_backend.py  test_ensemble_basic.py  test_evaluate_cli.py  test_extended_pii.py  test_features.py  test_fuzzy_dedupe.py  test_insight_filter_dedupe.py  test_insight_split.py  test_large_page.py  test_metrics.py  test_metrics_tightened.py  test_minhash_dedupe.py  test_new_features.py  test_rationale.py  test_redirect_loop.py  test_retry.py  test_robots_disallow.py  test_schema.py  test_schema_contract.py  test_synthetic_health.py  test_tag_inference.py  test_taxonomy.py  test_urlnorm.py  test_urlnorm_fuzz.py
